Refactor: Replace deprecated URL constructor with URI-to-URL conversion
Replaced the use of the deprecated URL constructor with a URI-to-URL conversion to follow modern Java best practices and avoid potential issues with URL parsing.